Do not emit OOM notifications on systemd services reload

When systemd services are reloaded, systemd emits all PropertiesChanged signals for all units.

Comparing with the original signals these have a null MainPID, so we can use that to identify them and not emit a notification.

BUG: 502279